# django5_stripe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  run-docker.sh  steps.md  stripe.md
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  apps.py  openapi.py  urls.py
api/admin/: __init__.py  auth.py  dashboard.py  inlines.py  items.py  orders.py  pricing.py  utils.py
api/migrations/: 0001_initial.py  0002_create_default_admin_user.py  0003_seed_demo_data_for_testing.py  0004_normalize_demo_seed_data.py  0005_create_valid_pricing_seed.py  0006_backfill_valid_pricing_seed.py  0007_processedstripeevent.py  __init__.py
api/models/: __init__.py  discount.py  item.py  order.py  tax.py  webhook_event.py
api/services/: __init__.py  checkout.py  pricing.py  stripe_client.py  webhooks.py
api/tests/: __init__.py  test_admin_dashboard.py  test_checkout_service.py  test_checkout_views.py  test_docs_and_home.py  test_item_views.py  test_models.py  test_settings_utils.py  test_stripe_client.py  test_system_views.py  test_webhook_service.py  test_webhook_views.py
api/views/: __init__.py  checkout.py  docs.py  home.py  item.py  system.py  webhook.py
caddy/: Caddyfile
django5_stripe/: __init__.py  asgi.py  urls.py  wsgi.py
django5_stripe/settings/: __init__.py  base.py  dev.py  prod.py  settings.py  stripe.py  unfold.py  utils.py
docker/: entrypoint.sh
scripts/: server-bootstrap.sh
templates/admin/: index.html
templates/api/: cancel.html  home.html  item_detail.html  (+5 more)
(+3 files in other folders)
